# Gengo

./: .gitignore  README.md  structure
gengo-frontend/src/: App.tsx
gengo-frontend/src/components/: AudioRecorder.tsx  Navbar.tsx
gengo-frontend/src/pages/: Dashboard.tsx  Feedback.tsx  Home.tsx  Practice.tsx
gengo-frontend/src/services/: api.ts
gengo-frontend/src/styles/: AudioRecorder.css  Feedback.css  Practice.css
gengo/backend/: .env  Cargo.toml  Rocket.toml
gengo/backend/frontend/: Cargo.toml  index.html
gengo/backend/src/: config.rs  error.rs  lib.rs  main.rs
gengo/backend/src/ai/: mod.rs
gengo/backend/src/api/: feedback.rs  mod.rs  profile.rs  sessions.rs  users.rs
gengo/backend/src/auth/: jwt.rs  mod.rs
gengo/backend/src/db/: connection.rs  mod.rs  schema.rs
gengo/backend/src/db/models/: feedback.rs  mod.rs  profile.rs  session.rs  user.rs
gengo/backend/src/frontend/: mod.rs
gengo/backend/src/speech/: mod.rs  recognition.rs  recorder.rs
gengo/backend/static/: index.html  styles.css
gengo/frontend/: .gitattributes  Cargo.toml  Trunk.toml.bak  index.html  package-lock.json  package.json
gengo/frontend/public/: index.html  manifest.json  styles.css
gengo/frontend/src/: App.css  App.tsx  app.rs  main.rs
gengo/frontend/src/api/: mod.rs  profile.rs  sessions.rs  users.rs
gengo/frontend/src/components/: AudioRecorder.tsx  Footer.tsx  Logo.tsx  Navbar.tsx  dashboard.rs  feedback.rs  home.rs  mod.rs  navbar.rs  practice.rs  recorder.rs
gengo/frontend/src/pages/: Home.tsx  NotFound.tsx
gengo/frontend/src/styles/: AudioRecorder.css  Feedback.css  Home.css  Navbar.css  Practice.css
gengo/frontend/src/types/: index.ts
