[package]
name = "gengo-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos dependencies
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
leptos_reactive = { version = "0.5" }

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "MediaDevices", 
    "MediaRecorder", 
    "Navigator", 
    "Window", 
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "AudioContext",
    "MediaStream"
]}

# For API calls
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]