[package]
name = "gengo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Backend dependencies
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
rocket_ws = "0.1"
rand = "0.8"

# Leptos dependencies for frontend
leptos = { version = "0.5", features = ["ssr"] }
leptos_meta = { version = "0.5", features = ["ssr"] }
leptos_router = { version = "0.5", features = ["ssr"] }
leptos_reactive = { version = "0.5" }
leptos_use = "0.8"

# Optional: for calling REST APIs
reqwest = { version = "0.11", features = ["json"] }

# Optional: for error handling in Leptos
http = "0.2"

# TEMPORARILY COMMENTED OUT UNTIL CORE APP IS WORKING
# whisper-rs = "0.8"
# hound = "3.5"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

# Enable optimization for dependencies but not our code during debug builds
[profile.dev.package."*"]
opt-level = 3
